# soccer-ball-highlighter

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
training/: EVALUATION.md  annotator.py  build_dataset.py  build_size.sh  find_errors.py  pyproject.toml  train.py
training/data/labels/dui-par/: label_data.json  negatives.txt
training/data/labels/dui-par/labels/: dui-par_0005.jpg.txt  dui-par_0007.jpg.txt  dui-par_0008.jpg.txt  dui-par_0010.jpg.txt  dui-par_0013.jpg.txt  dui-par_0015.jpg.txt  dui-par_0016.jpg.txt  dui-par_0017.jpg.txt  dui-par_0018.jpg.txt  dui-par_0019.jpg.txt  dui-par_0020.jpg.txt  dui-par_0021.jpg.txt  dui-par_0023.jpg.txt  dui-par_0024.jpg.txt  dui-par_0027.jpg.txt  dui-par_0028.jpg.txt  dui-par_0029.jpg.txt  dui-par_0030.jpg.txt  dui-par_0031.jpg.txt  dui-par_0032.jpg.txt  dui-par_0034.jpg.txt  dui-par_0035.jpg.txt  dui-par_0036.jpg.txt  dui-par_0037.jpg.txt  dui-par_0038.jpg.txt  dui-par_0040.jpg.txt  dui-par_0041.jpg.txt  dui-par_0042.jpg.txt  dui-par_0043.jpg.txt  dui-par_0044.jpg.txt  dui-par_0045.jpg.txt  dui-par_0046.jpg.txt  dui-par_0047.jpg.txt  dui-par_0050.jpg.txt  dui-par_0053.jpg.txt  (+439 more)
training/data/labels/fra-zwe/: label_data.json  negatives.txt
training/data/labels/ivo-nor/: label_data.json  negatives.txt
training/data/labels/mex-ecu/: label_data.json  negatives.txt
training/pipeline/: autolabel.py  bh_common.py  build_dataset.py  eval_model.py  experiments.yaml  extract_frames.py  rebuild_review.py  refine_labels.py  run_experiments.py  run_pipeline.sh
training/tests/: fake_ultralytics.py  test_pipeline_e2e.py
(+1569 files in other folders)
